@@ -1,13 +1,12 @@
 
-# System messages
-plugin-enabled: %s has been enabled!
+# Plugin messages
+plugin-description: Simple multiworld homes.
+plugin-enabled: {0} has been enabled!
 panic: A severe error has occurred! Disabling plugin.
 unable-to-use-database: Unable to initialise database!
 no-database: No database schema found. Creating a new one.
-homes-loaded: %d homes loaded.
-wildcard-permission-description: Allow unrestricted use of the %s command.
-
-# Plugin messages
+plugin-wildcard-description: Grants all {0} permissions to the user.
+wildcard-permission-description: Allow unrestricted use of the {0} command.
 no-homes: no homes
 one-home: one home
 many-homes: {0,number} homes
@@ -16,6 +15,18 @@ homes-loaded: The database contains {0}.
 # Generic messages
 command-not-permitted: You are not allowed to do that.
 command-is-player-only: You may not use this command from the console.
+
+# CommandManager messages
+commandmanager-help-usage: Type {0} {1} <command> for details on a command.
+commandmanager-help-command: help
+commandmanager-help-entry: /{0} {1} {2}
+commandmanager-invalid-command: Invalid command!
+commandmanager-list-commands-hint: Type /{0} to list available commands.
+
+# PluginCommand localisation
+command-not-available-to-console: You may not use that command from the console.
+command-not-permitted: You do not have permission to do that.
+command-permission-required: You require {0} to do that.
 
 # SetCommand localisation
 setcommand-name: set
@@ -26,9 +37,10 @@ setcommand-usage: [player]
 setcommand-others-permission-name: others
 setcommand-others-permission-description: Allow this player to set homes for others.
 
-setcommand-home-set: A new home has been created.
-setcommand-location-is-obstructed: This location is obstructed.
-setcommand-location-is-not-buildable: You may not set a home here.
+home-set: A new home has been created.
+home-set-others: Set home for {0}.
+location-is-obstructed: This location is obstructed.
+not-allowed-to-build-here: You may not set a home here.
 
 # TeleportCommand localisation
 teleportcommand-name: teleport
